commit to let tema members see

--- a/SiliconBackOffice/SiliconBackOffice/Components/_Imports.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/_Imports.razor
@@ -18,7 +18,9 @@
 @* @using Pages
 @using Components.Pages.Partials
 @using Components.Pages.Partials.Courses *@
+@using SiliconBackOffice.Models.Courses
 @using SiliconBackOffice.Components.Pages.Partials.Courses
+
 
 
 
