--- a/SiliconBackOffice/SiliconBackOffice/Components/App.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/App.razor
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="SiliconBackOffice.styles.css" />
+    <link rel="stylesheet" href="app.min.css" />
+    <link rel="stylesheet" href="https://kit.fontawesome.com/41c8b474e2.css">
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
 </head>
