--- a/SiliconBackOffice/SiliconBackOffice/Components/Pages/Courses.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Pages/Courses.razor
@@ -1,74 +1,89 @@
 ﻿@page "/courses"
+
+@rendermode InteractiveServer
 @attribute [StreamRendering]
 
 <PageTitle>Courses</PageTitle>
 
-<div class="container mt-5">
-    <div class="text-center">
-        <h1>Courses Management</h1>
-        <p class="lead">Manage courses, descriptions, content, and categories.</p>
-    </div>
+<section class="courses">
+    <div class="container mt-5">
+        <div class="text-center">
+            <h1>Courses Management</h1>
+            <p class="lead">Manage courses, descriptions, content, and categories.</p>
+        </div>
 
-    <SiliconBackOffice.Components.Pages.Partials.Courses._CoursesForm />
-
-@*     <table class="table table-hover mt-4">
-        <thead class="thead-dark">
-            <tr>
-                <th scope="col">ID</th>
-                <th scope="col">Course Name</th>
-                <th scope="col">Description</th>
-                <th scope="col">Includes</th>
-                <th scope="col">Category</th>
-                <th scope="col">Content</th>
-                <th scope="col">Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var course in courses)
-            {
+        <table class="table table-hover mt-4 courses-aside">
+            <thead class="thead-dark">
                 <tr>
-                    <td>@course.Id</td>
-                    <td>@course.CourseName</td>
-                    <td>@course.Description</td>
-                    <td>@course.Includes</td>
-                    <td>@course.Category</td>
-                    <td>@course.Content</td>
-                    <td>
-                        <button class="btn btn-sm btn-primary" @onclick="() => EditCourse(course)">Edit</button>
-                        <button class="btn btn-sm btn-danger" @onclick="() => DeleteCourse(course)">Delete</button>
-                    </td>
+                   @*  <th scope="col">ID</th> *@
+                    <th scope="col">Course Name</th>
+                    @* <th scope="col">Description</th>
+                    <th scope="col">Includes</th>
+                    <th scope="col">Category</th>
+                    <th scope="col">Content</th>
+                    <th scope="col">Actions</th> *@
                 </tr>
-            }
-        </tbody>
-    </table> *@
-</div>
+            </thead>
+            <tbody>
+                @if (_courses == null)
+                {
+                    <div>Loading...</div>
+                }
+                else
+                {
+                    @foreach (var course in _courses)
+                    {
+                        <tr>
+                            @* <td>@course.Id</td> *@
+                            <td>@course.Title</td>
+                            @* <td>@course.ProgramDetails</td> *@
+                            @* <td>@course.Content.Description</td> *@
+                           @*  @foreach (var category in _categories)
+                            {
+                                <td>@course.Categories</td>
+                            } *@
+                            <td>@course.Content</td>
+                            <td>
+                                <button class="btn btn-sm btn-primary" @onclick="() => EditCourse(course)">View/Edit</button>
+                                <button class="btn btn-sm btn-danger" @onclick="() => DeleteCourse(course)">Delete</button>
+                            </td>
+                        </tr>
+                    }
+                }
+            </tbody>
+        </table>
+
+        <_CoursesBox _course="_courseById" />
+
+        <_CoursesForm _course="_courseById" />
+
+    </div>
+</section>
 
 @code {
-    // private List<Course> courses = new List<Course>
-    // {
-    //     new Course { Id = 1, CourseName = "Introduction to C#", Description = "Learn the basics of C#", Includes = "Videos, PDFs", Category = "Programming", Content = "Basics, Syntax, OOP" },
-    //     new Course { Id = 2, CourseName = "Advanced Blazor", Description = "Master Blazor framework", Includes = "Videos, Code Samples", Category = "Web Development", Content = "Components, Data Binding, Services" }
+    private IEnumerable<Course> _courses { get; set; } = [];
+    private Course? _courseById { get; set; }
+    private IEnumerable<CategoryModel> _categories { get; set; } = [];
 
-    // };
+    protected override async Task OnInitializedAsync()
+    {
+        var result = await _courseService.GetAllCoursesAsync("", "", 1, 9);
 
-    // private void EditCourse(Course course)
-    // {
+        _courses = result.Courses;
+    }
 
-    // }
+    private async Task EditCourse(Course course)
+    {
+        var result = await _courseService.GetOneCourseByIdAsync(course.Id);
+        if (result != null)
+        {
+            _courseById = result;
+        }
+    }
 
-    // private void DeleteCourse(Course course)
-    // {
+    private void DeleteCourse(Course course)
+    {
 
-    //     courses.Remove(course);
-    // }
-
-    // private class Course
-    // {
-    //     public int Id { get; set; }
-    //     public string CourseName { get; set; }
-    //     public string Description { get; set; }
-    //     public string Includes { get; set; }
-    //     public string Category { get; set; }
-    //     public string Content { get; set; }
-    // }
+        //courses.Remove(course);
+    }
 }
