--- a/SiliconBackOffice/SiliconBackOffice/Components/Pages/Partials/Courses/_CoursesForm.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Pages/Partials/Courses/_CoursesForm.razor
@@ -1,75 +1,24 @@
-﻿@using SiliconBackOffice.Models.Courses
+﻿<div class="course-form">
+    <div>Course Form blabla</div>
+</div>
 
-@if (Courses == null)
+@if (_course == null)
 {
-    <p>Loading...</p>
+    <div>null</div>
 }
 else
 {
-    @foreach (var course in Courses)
-{
+    <EditForm FormName="EditCourse" Model="_course">
+        <ChildContent>
+            <InputText @bind-Value="_course.Title" />
+            
 
-    <div class="grid-item card">
-        <div class="img-wrapper">
-            <img class="course-image" src="/img/courses/@course.ImageUri" alt="@course.AltText">
-            <p class="@(course.BestSeller ? "best-seller" : "hidden")">Best Seller</p>
-        </div>
-        <div class="bookmark-circle">
+        </ChildContent>
 
-            <i class="fa-regular fa-bookmark bookmark-empty"></i>
-
-        </div>
-        <div class="text-wrapper">
-            <div class="text-title">
-                <h5 class="course-title">@course.Title</h5>
-            </div>
-            <div class="text-rest">
-                <span class="by">By</span>
-                @if (course.Authors != null && course.Authors.Count() > 0)
-                {
-                    int i = 0;
-                    foreach (var author in course.Authors)
-                    {
-                        <span class="author">@author.Name</span>
-                        i++;
-                        if (course.Authors.Count() != i)
-                        {
-                            <span> & </span>
-                        }
-                    }
-                }
-                <div class="price-wrapper">
-                    <div class="@(course.DiscountPrice >= 1 ? "discount-price" : "hidden")">
-                        @course.Currency@course.DiscountPrice.ToString("0.00", System.Globalization.CultureInfo.InvariantCulture)
-                    </div>
-                    <div class="@(course.DiscountPrice >= 1 ? "price discount-applied" : "price")">
-                        @course.Currency@course.Price.ToString("0.00", System.Globalization.CultureInfo.InvariantCulture)
-                    </div>
-                </div>
-                <div class="divider"></div>
-                <div class="description-wrapper">
-                    @{
-                        double likesInK = Math.Max(0, Math.Round(course.NumberOfLikes / 1000.0, 1));
-                    }
-                    <span class="description"><i class="fa-light fa-clock"></i> @course.LengthInHours hours</span>
-                    <span class="description"><i class="fa-light fa-thumbs-up"></i> @course.RatingInPercentage% (@likesInK K)</span>
-                </div>
-            </div>
-        </div>
-    </div>
-}    
+    </EditForm>    
 }
 
-
 @code {
-    private IEnumerable<Course>? Courses { get; set; }
-    private IEnumerable<CategoryModel>? Categories { get; set; }
-
-    protected override async Task OnInitializedAsync()
-    {
-        var result = await _courseService.GetAllCoursesAsync("", "", 1, 9);
-
-        Courses = result.Courses;
-    }
-
+    [Parameter]
+    public Course? _course { get; set; }
 }
