update courses now works

--- a/SiliconBackOffice/SiliconBackOffice/Components/Pages/Courses.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Pages/Courses.razor
@@ -6,7 +6,7 @@
 <PageTitle>Courses</PageTitle>
 
 <section class="courses">
-    <div class="container mt-5">
+    <div class="container-test">
         <div class="text-center">
             <h1>Courses Management</h1>
             <p class="lead">Manage courses, descriptions, content, and categories.</p>
