--- a/SiliconBackOffice/SiliconBackOffice/wwwroot/app.css
+++ b/SiliconBackOffice/SiliconBackOffice/wwwroot/app.css
@@ -204,6 +204,11 @@ h6, .h6 {
   bottom: 0;
 }
 
+.divider {
+  border-bottom: 1px solid var(--color-gray-500);
+  margin: 1rem 0;
+}
+
 :root {
   --color-gray-000: #FFFFFF;
   --color-gray-100: #F3F6FF;
@@ -732,25 +737,26 @@ h6, .h6 {
 /*// cookieConsent*/
 /*@import 'sections/_cookieConsent.scss';
 */
-.courses .container {
+.courses .container-test {
+  margin: 0 1rem;
   display: grid;
-  grid-template-columns: auto 1fr;
-  grid-template-areas: "main-text main-text" "aside courses-content" "course-form course-form";
+  grid-template-columns: auto 1fr 1fr;
+  grid-template-areas: "main-text main-text main-text" "course-box course-form course-form" "aside course-form course-form" ". course-form course-form" ". course-form course-form";
   gap: 2rem 10rem;
 }
-.courses .container .text-center {
+.courses .container-test .text-center {
   grid-area: main-text;
 }
-.courses .container .courses-aside {
+.courses .container-test .courses-aside {
   grid-area: aside;
 }
-.courses .container .grid-item {
-  grid-area: courses-content;
+.courses .container-test .grid-item {
+  grid-area: course-box;
 }
-.courses .container .course-form {
+.courses .container-test .course-form {
   grid-area: course-form;
 }
-.courses .container .grid-item {
+.courses .container-test .grid-item {
   position: relative;
   max-width: 420px;
   display: flex;
@@ -761,21 +767,21 @@ h6, .h6 {
   z-index: 2;
   transition: all 0.15s ease-out;
 }
-.courses .container .grid-item:hover {
+.courses .container-test .grid-item:hover {
   transform: scale(101%, 101%);
   transition: all 0.3s ease-in;
 }
-.courses .container .grid-item:active {
+.courses .container-test .grid-item:active {
   transform: scale(99%, 99%);
   transition: all 0.3s ease-in;
 }
-.courses .container .grid-item .img-wrapper .course-image {
+.courses .container-test .grid-item .img-wrapper .course-image {
   width: 100%;
   height: auto;
   aspect-ratio: 3.5/2;
   object-fit: cover;
 }
-.courses .container .grid-item .img-wrapper .best-seller {
+.courses .container-test .grid-item .img-wrapper .best-seller {
   padding: 0.1rem 0.5rem;
   border-radius: 0.3rem;
   background-color: var(--color-success);
@@ -784,7 +790,7 @@ h6, .h6 {
   top: 1rem;
   left: 1rem;
 }
-.courses .container .grid-item .bookmark-circle {
+.courses .container-test .grid-item .bookmark-circle {
   position: absolute;
   top: 1rem;
   right: 1rem;
@@ -795,14 +801,14 @@ h6, .h6 {
   padding: 1rem;
   cursor: pointer;
 }
-.courses .container .grid-item .bookmark-circle .fa-bookmark {
+.courses .container-test .grid-item .bookmark-circle .fa-bookmark {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: var(--color-black);
 }
-.courses .container .grid-item .course-enrolled {
+.courses .container-test .grid-item .course-enrolled {
   position: absolute;
   bottom: 0;
   right: 0;
@@ -811,35 +817,35 @@ h6, .h6 {
   margin: 1rem -3rem;
   transform: rotateZ(315deg);
 }
-.courses .container .grid-item .course-enrolled span {
+.courses .container-test .grid-item .course-enrolled span {
   padding: 0.2rem;
   color: white;
 }
-.courses .container .grid-item .text-wrapper {
+.courses .container-test .grid-item .text-wrapper {
   display: grid;
   grid-template-rows: 1.2fr 2fr;
   grid-template-areas: "title" "rest";
   background-color: var(--color-gray-000);
   padding: 0.5rem;
 }
-.courses .container .grid-item .text-wrapper .text-title {
+.courses .container-test .grid-item .text-wrapper .text-title {
   grid-area: title;
 }
-.courses .container .grid-item .text-wrapper .text-rest {
+.courses .container-test .grid-item .text-wrapper .text-rest {
   grid-area: rest;
 }
-.courses .container .grid-item .text-wrapper .text-rest span {
+.courses .container-test .grid-item .text-wrapper .text-rest span {
   color: var(--color-gray-900);
 }
-.courses .container .grid-item .text-wrapper .text-rest .by {
+.courses .container-test .grid-item .text-wrapper .text-rest .by {
   margin-right: 0.2rem;
 }
-.courses .container .grid-item .text-wrapper .text-rest .price-wrapper {
+.courses .container-test .grid-item .text-wrapper .text-rest .price-wrapper {
   display: flex;
   gap: 1rem;
   margin: 0.5rem 0;
 }
-.courses .container .grid-item .text-wrapper .text-rest .price-wrapper .price {
+.courses .container-test .grid-item .text-wrapper .text-rest .price-wrapper .price {
   line-height: 160%;
   font-weight: 400;
   color: var(--color-gray-700);
@@ -849,10 +855,10 @@ h6, .h6 {
   font-size: 1.25rem !important;
   color: var(--color-theme);
 }
-.courses .container .grid-item .text-wrapper .text-rest .price-wrapper .discount-applied {
+.courses .container-test .grid-item .text-wrapper .text-rest .price-wrapper .discount-applied {
   text-decoration-line: line-through;
 }
-.courses .container .grid-item .text-wrapper .text-rest .price-wrapper .discount-price {
+.courses .container-test .grid-item .text-wrapper .text-rest .price-wrapper .discount-price {
   line-height: 160%;
   font-weight: 400;
   color: var(--color-gray-700);
@@ -862,24 +868,64 @@ h6, .h6 {
   font-size: 1.25rem !important;
   color: var(--color-danger);
 }
-.courses .container .grid-item .text-wrapper .text-rest .divider {
+.courses .container-test .grid-item .text-wrapper .text-rest .divider {
   width: 100%;
   height: 1px;
   background-color: var(--color-gray-300);
   margin-bottom: 1rem;
 }
-.courses .container .grid-item .text-wrapper .text-rest .description-wrapper {
+.courses .container-test .grid-item .text-wrapper .text-rest .description-wrapper {
   margin-bottom: 0.5rem;
 }
-.courses .container .grid-item .text-wrapper .text-rest .description-wrapper span {
+.courses .container-test .grid-item .text-wrapper .text-rest .description-wrapper span {
   margin: 0 1rem 0 0;
 }
-.courses .container .courses-form {
+.courses .container-test .courses-form {
   background: var(--color-gray-200);
   padding: 2rem;
 }
-.courses .container .courses-form .form-group {
-  margin: 1rem 0;
+.courses .container-test .courses-form .form-group {
+  margin: 0.5rem 0;
+}
+.courses .container-test .courses-form .form-group label {
+  line-height: 160%;
+  font-weight: 400;
+  color: var(--color-gray-700);
+  font-family: var(--font-manrope);
+  font-weight: 800;
+  color: var(--color-gray-900);
+  font-size: 1rem !important;
+  margin: 0.5rem 0;
+}
+.courses .container-test .courses-form .checkbox-wrapper {
+  margin: 2rem 0;
+  display: flex;
+}
+.courses .container-test .courses-form .checkbox-wrapper .checkbox-group {
+  margin: 0 2rem 0 0;
+}
+.courses .container-test .courses-form .categories-group {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0 1rem;
+}
+.courses .container-test .courses-form .categories-group .form-group {
+  margin: 0;
+}
+.courses .container-test .courses-form .price-wrapper {
+  display: flex;
+  gap: 0 1rem;
+}
+.courses .container-test .courses-form .misc-wrapper {
+  display: flex;
+  gap: 0 1rem;
+}
+.courses .container-test .courses-form .authors-group {
+  display: flex;
+  gap: 0.5rem 0;
+}
+.courses .container-test .courses-form .content-group .program-details-group {
+  display: flex;
 }
 
 /*    .courses .container .text-center {
