--- a/SiliconBackOffice/SiliconBackOffice/wwwroot/css/scss/core/_base.scss
+++ b/SiliconBackOffice/SiliconBackOffice/wwwroot/css/scss/core/_base.scss
@@ -55,3 +55,8 @@ h6, .h6 { @include h6; }
     position: fixed;
     bottom: 0;
 }
+
+.divider {
+    border-bottom: 1px solid var(--color-gray-500);
+    margin: 1rem 0;
+}
