accidentally worked in wrong branches, bringing changes over from develop

--- a/SiliconBackOffice/SiliconBackOffice/wwwroot/app.css
+++ b/SiliconBackOffice/SiliconBackOffice/wwwroot/app.css
@@ -756,6 +756,9 @@ h6, .h6 {
 .courses .container-test .course-form {
   grid-area: course-form;
 }
+.courses .container-test .course-form .load-text {
+  margin: 3rem 0;
+}
 .courses .container-test .grid-item {
   position: relative;
   max-width: 420px;
@@ -881,7 +884,7 @@ h6, .h6 {
   margin: 0 1rem 0 0;
 }
 .courses .container-test .courses-form {
-  background: var(--color-gray-200);
+  background: var(--color-gray-300);
   padding: 2rem;
 }
 .courses .container-test .courses-form .form-group {
@@ -904,45 +907,28 @@ h6, .h6 {
 .courses .container-test .courses-form .checkbox-wrapper .checkbox-group {
   margin: 0 2rem 0 0;
 }
-.courses .container-test .courses-form .categories-group {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 0 1rem;
-}
-.courses .container-test .courses-form .categories-group .form-group {
-  margin: 0;
-}
-.courses .container-test .courses-form .price-wrapper {
+.courses .container-test .courses-form .form-wrapper {
+  width: 100%;
   display: flex;
   gap: 0 1rem;
 }
-.courses .container-test .courses-form .misc-wrapper {
-  display: flex;
-  gap: 0 1rem;
+.courses .container-test .courses-form .form-wrapper .form-group {
+  width: 100%;
 }
-.courses .container-test .courses-form .authors-group {
+.courses .container-test .courses-form .input-wrapper {
   display: flex;
   gap: 0.5rem 0;
 }
-.courses .container-test .courses-form .content-group .program-details-group {
+.courses .container-test .courses-form .content-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 0 1rem;
+}
+.courses .container-test .courses-form .content-wrapper .program-details-group {
   display: flex;
+  gap: 1rem;
 }
 
-/*    .courses .container .text-center {
-        grid-area: main-text;
-    }
-
-    .courses .container .courses-aside {
-        grid-area: aside;
-    }
-
-    .courses .container .grid-item {
-        grid-area: courses-content;
-    }
-
-    .courses .container .course-form {
-        grid-area: course-form;
-    }*/
 html, body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
