--- a/SiliconBackOffice/SiliconBackOffice/Components/Pages/Partials/Courses/_CoursesForm.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Pages/Partials/Courses/_CoursesForm.razor
@@ -1,33 +1,38 @@
 ﻿<div class="course-form">
-    <div>Edit Course Content</div>
-
     @if (_course == null)
     {
-        <div>null</div>
+        <h6 class="load-text">Click a "view/edit" button to see course details</h6>
     }
     else
     {
         <EditForm FormName="EditCourse" Model="_course" class="form-control courses-form">
             <ChildContent>
-                <div class="form-group">
-                    <label>Id</label>
-                    <InputText @bind-Value="_course.Id" class="form-control" />
+
+                <div class="form-wrapper">
+                    <div class="form-group">
+                        <label>Id</label>
+                        <InputText @bind-Value="_course.Id" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label>Title</label>
+                        <InputText @bind-Value="_course.Title" class="form-control" />
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label>Title</label>
-                    <InputText @bind-Value="_course.Title" class="form-control" />
-                </div>
+
                 <div class="form-group">
                     <label>Ingress</label>
                     <InputText @bind-Value="_course.Ingress" class="form-control" />
                 </div>
-                <div class="form-group">
-                    <label>ImageUri</label>
-                    <InputText @bind-Value="_course.ImageUri" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <label>AltText</label>
-                    <InputText @bind-Value="_course.AltText" class="form-control" />
+                <div class="form-wrapper">
+                    <div class="form-group">
+                        <label>ImageUri</label>
+                        <InputText @bind-Value="_course.ImageUri" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label>AltText</label>
+                        <InputText @bind-Value="_course.AltText" class="form-control" />
+                    </div>
+
                 </div>
 
                 <div class="divider"></div>
@@ -47,7 +52,7 @@
 
                 @if (_course.Categories != null)
                 {
-                    <div class="categories-group">
+                    <div class="content-wrapper">
                         @for (int i = 0; i < _course.Categories.Length; i++)
                         {
                             <div class="form-group">
@@ -60,7 +65,7 @@
 
                 <div class="divider"></div>
 
-                <div class="price-wrapper">
+                <div class="form-wrapper">
                     <div class="form-group">
                         <label>Currency</label>
                         <InputText @bind-Value="_course.Currency" class="form-control" />
@@ -77,7 +82,7 @@
 
                 <div class="divider"></div>
 
-                <div class="misc-wrapper">
+                <div class="form-wrapper">
                     <div class="form-group">
                         <label>Length in hours</label>
                         <InputText @bind-Value="_course.LengthInHours" class="form-control" />
@@ -100,7 +105,7 @@
 
                 @if (_course.Authors != null)
                 {
-                    <div class="authors-group">
+                    <div class="form-wrapper">
                         <div class="form-group">
                             @foreach (var author in _course.Authors)
                             {
@@ -115,41 +120,42 @@
 
                 @if (_course.Content != null)
                 {
-                    <div class="content-group">
-                            <div class="form-group">
-                                <label>Content Description</label>
-                                <InputText @bind-Value="_course.Content.Description" class="form-control" />
-                            </div>
+                    <div class="form-group">
+                        <label>Content Description</label>
+                        <InputText @bind-Value="_course.Content.Description" class="form-control" />
+                    </div>
 
-                            @if (_course.Content.Courseincludes != null)
+                    <div class="content-wrapper">
+                        @if (_course.Content.Courseincludes != null)
+                        {
+                            @for (int i = 0; i < _course.Content.Courseincludes.Length; i++)
                             {
-                                <div class="categories-group">
-                                    @for (int i = 0; i < _course.Content.Courseincludes.Length; i++)
-                                    {
-                                        <div class="form-group">
-                                            <label>Course includes @i</label>
-                                            <InputText @bind-Value="_course.Content.Courseincludes[i]" class="form-control" />
-                                        </div>
-                                    }
+                                <div class="form-group">
+                                    <label>Course includes @i</label>
+                                    <InputText @bind-Value="_course.Content.Courseincludes[i]" class="form-control" />
                                 </div>
                             }
+                        }
+                    </div>
 
-                            <div class="divider"></div>
+                    <div class="divider"></div>
 
-                            @if (_course.Content.WhatYouLearn != null)
+                    <div class="content-wrapper">
+                        @if (_course.Content.WhatYouLearn != null)
+                        {       
+                            @for (int i = 0; i < _course.Content.WhatYouLearn.Length; i++)
                             {
-                                <div class="categories-group">
-                                    @for (int i = 0; i < _course.Content.WhatYouLearn.Length; i++)
-                                    {
-                                        <div class="form-group">
-                                            <label>What you learn @i</label>
-                                            <InputText @bind-Value="_course.Content.WhatYouLearn[i]" class="form-control" />
-                                        </div>
-                                    }
+                                <div class="form-group">
+                                    <label>What you learn @i</label>
+                                    <InputText @bind-Value="_course.Content.WhatYouLearn[i]" class="form-control" />
                                 </div>
                             }
+                        }
+                    </div>
 
-                        <div class="divider"></div>
+                    <div class="divider"></div>
+
+                    <div class="content-wrapper">
 
                         @if (_course.Content.ProgramDetails != null)
                         {
@@ -179,7 +185,7 @@
                                         }
                                     </div>
                                 }
-    
+
                             }
                         }
                     </div>
@@ -187,10 +193,7 @@
                 <button @onclick=" () => HandleSubmit(_course)">Save Course</button>
                 <button type="reset">Cancel</button>
 
-
             </ChildContent>
-
-
         </EditForm>
     }
 </div>
@@ -207,7 +210,7 @@
         if (iseExistingCourse != null)
         {
             var updatedCourse = await _courseService.UpdateOneCourseAsync(course);
-            //maybe sort out function to update the   
+            //maybe sort out function to update the
         }
         else
         {
