--- a/SiliconBackOffice/SiliconBackOffice/wwwroot/css/scss/sections/_courses_backoffice.scss
+++ b/SiliconBackOffice/SiliconBackOffice/wwwroot/css/scss/sections/_courses_backoffice.scss
@@ -4,11 +4,7 @@
         display: grid;
         grid-template-columns: auto 1fr 1fr;
         grid-template-areas:
-            'main-text main-text main-text'
-            'course-box course-form course-form'
-            'aside course-form course-form'
-            '. course-form course-form'
-            '. course-form course-form';
+            'main-text main-text main-text' 'course-box course-form course-form' 'aside course-form course-form' '. course-form course-form' '. course-form course-form';
         gap: 2rem 10rem;
 
         .text-center {
@@ -25,6 +21,10 @@
 
         .course-form {
             grid-area: course-form;
+
+            .load-text {
+                margin: 3rem 0;
+            }
         }
 
         .grid-item {
@@ -163,7 +163,7 @@
         }
 
         .courses-form {
-            background: var(--color-gray-200);
+            background: var(--color-gray-300);
             padding: 2rem;
 
             .form-group {
@@ -184,52 +184,31 @@
                 }
             }
 
-            .categories-group {
-                display: grid;
-                grid-template-columns: 1fr 1fr;
+            .form-wrapper {
+                width: 100%;
+                display: flex;
                 gap: 0 1rem;
 
                 .form-group {
-                    margin: 0;
+                    width: 100%;
                 }
             }
 
-            .price-wrapper {
-                display: flex;
-                gap: 0 1rem;
-            }
-
-            .misc-wrapper {
-                display: flex;
-                gap: 0 1rem;
-            }
-
-            .authors-group {
+            .input-wrapper {
                 display: flex;
                 gap: 0.5rem 0;
             }
 
-            .content-group {
+            .content-wrapper {
+                display: grid;
+                grid-template-columns: 1fr 1fr 1fr 1fr;
+                gap: 0 1rem;
+
                 .program-details-group {
                     display: flex;
+                    gap: 1rem;
                 }
             }
         }
     }
 }
-
-/*    .courses .container .text-center {
-        grid-area: main-text;
-    }
-
-    .courses .container .courses-aside {
-        grid-area: aside;
-    }
-
-    .courses .container .grid-item {
-        grid-area: courses-content;
-    }
-
-    .courses .container .course-form {
-        grid-area: course-form;
-    }*/
