--- a/SiliconBackOffice/SiliconBackOffice/Components/_Imports.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/_Imports.razor
@@ -1,4 +1,11 @@
-﻿@using System.Net.Http
+﻿@inject UserManager<ApplicationUser> _userManager
+@inject SignInManager<ApplicationUser> _signInManager
+@inject NavigationManager _navigationManager
+@inject IdentityRedirectManager _redirectManager
+@inject IEmailSender<ApplicationUser> _emailSender
+@inject IUserStore<ApplicationUser> _userStore
+@inject ILogger<Register> _logger
+@using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
@@ -6,23 +13,47 @@
 @using Microsoft.AspNetCore.Components.Web
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.Identity
 @using Microsoft.JSInterop
 @using SiliconBackOffice
 @using SiliconBackOffice.Client
 @using SiliconBackOffice.Components
+@using System.ComponentModel.DataAnnotations
+@using System.Text
+@using System.Text.Encodings.Web
+@using Microsoft.AspNetCore.WebUtilities
+@using SiliconBackOffice.Components.Account
+@using SiliconBackOffice.Components.Account.Pages
+@using SiliconBackOffice.Data
+
+@* -----------------------Account------------------------------------- @
+
+@using SiliconBackOffice.Components.Account
+@using SiliconBackOffice.Components.Account.Pages
+@using SiliconBackOffice.Components.Pages.Partials.AuthPartials
+
+@inject UserManager<ApplicationUser> _userManager
+@inject SignInManager<ApplicationUser> _signInManager
+@inject NavigationManager _navigationManager
+@inject IdentityRedirectManager _redirectManager
+@inject IEmailSender<ApplicationUser> _emailSender
+@inject IUserStore<ApplicationUser> _userStore
+@inject ILogger<Register> _logger
 
 
-@* -----------------------Courses------------------------------------- *@
+@ -----------------------Courses------------------------------------- @
 
 @using Services
-@* @using Pages
+@ @using Pages
 @using Components.Pages.Partials
 @using Components.Pages.Partials.Courses *@
 @using SiliconBackOffice.Models.Courses
 @using SiliconBackOffice.Components.Pages.Partials.Courses
-
-
-
+@using SiliconBackOffice.Services
+@using SiliconBackOffice.Models.SavedCourses
 
 @inject CourseService _courseService
 @inject NavigationManager navigationManager
+
+
+@inject SavedCoursesService _savedCoursesService
