--- a/SiliconBackOffice/SiliconBackOffice/Components/Pages/SavedCourses.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Pages/SavedCourses.razor
@@ -49,7 +49,7 @@
 </section>
 
 @code {
-    public IEnumerable<SavedCourses>? _savedCourses { get; set; }
+    public IEnumerable<SavedCoursesModel>? _savedCourses { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
