--- a/SiliconBackOffice/SiliconBackOffice/Components/Pages/SavedCourses.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Pages/SavedCourses.razor
@@ -1,6 +1,5 @@
 ﻿@page "/savedCourses"
-
-
+@using Microsoft.AspNetCore.Components.Forms
 
 @rendermode InteractiveServer
 @attribute [StreamRendering]
@@ -8,46 +7,43 @@
 
 <PageTitle>Saved Courses</PageTitle>
 
-<section class="saved-courses">
-    <div class="container">
-        <div class="saved-items-heading">
-            <h1>Saved Items</h1>
-            <button class="btn-delete-all"><i class="fa-regular fa-trash-can"></i> Delete all</button>
-        </div>
-       
+<h1>Saved courses</h1>
 
-        @if(_savedCourses == null)
-        {
-            <div>Loading...</div>
-        }
-        else
-        {
-            <table>
-                <thead>
-                    <tr>
-                        <th>Course Id</th>
-                        <th>Bookmarked</th>
-                        <th>Joined</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var course in _savedCourses)
-                    {
-                        <tr>
-                           @*  <td>@course.CourseId</td>
-                            <td>@course.IsBookmarked</td>
-                            <td>@course.HasJoined</td> *@
-                        </tr>
-                    }
-                </tbody>
-            </table>
-        }
+@if (_savedCourses == null)
+{
+    <div>Loading ....</div>
+}
+else
+{
+    @foreach (var course in _savedCourses)
+    {
+        <EditForm Model="@course" class="form-control saved-courses-form">
+            <ChildContent>
 
-    </div>
+                <div class="form-wrapper-saved-courses">
+                    <div class="form-group-saved-courses-id">
+                        <label id="user-id-label">User Id</label>
+                        <InputText @bind-Value="course.UserId" id="user-id-input" />
+                    </div>
+                    <div class="form-group-saved-courses-id">
+                        <label id="course-id-label">Course Id</label>
+                        <InputText @bind-Value="course.CourseId" id="course-id-input" />
+                    </div>
+                    <div class="form-group-saved-courses">
+                        <label id="bookmark-lable">Bookmarked</label>
+                        <InputCheckbox id="bookmark-input" @bind-Value="course.IsBookmarked" />
+                    </div>
+                    <div class="form-group-saved-courses">
+                        <label id="has-joined-label">Has Joined</label>
+                        <InputCheckbox id="has-joined-input" @bind-Value="course.HasJoined" />
+                    </div>
 
+                </div>
+            </ChildContent>
+        </EditForm>
+    }
 
-</section>
-
+}
 @code {
     public IEnumerable<SavedCoursesModel>? _savedCourses { get; set; }
 
