login/signup done, roles added

--- a/SiliconBackOffice/SiliconBackOffice/Components/Pages/Users.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Pages/Users.razor
@@ -1,6 +1,7 @@
 ﻿@page "/Users"
 @using SiliconBackOffice.Data
 @attribute [StreamRendering]
+@attribute [Authorize]
 
 <PageTitle>Users</PageTitle>
 
