--- a/SiliconBackOffice/SiliconBackOffice/wwwroot/css/scss/_sections.scss
+++ b/SiliconBackOffice/SiliconBackOffice/wwwroot/css/scss/_sections.scss
@@ -45,4 +45,8 @@
 /*@import 'sections/_cookieConsent.scss';
 */
 
+@import './sections/auth-scss/_signUp.scss';
+@import './sections/auth-scss/_signIn.scss';
+
+
 @import './sections/_courses_backoffice.scss';
