--- a/SiliconBackOffice/SiliconBackOffice/Components/_Imports.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/_Imports.razor
@@ -6,10 +6,41 @@
 @using Microsoft.AspNetCore.Components.Web
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.Identity
 @using Microsoft.JSInterop
 @using SiliconBackOffice
 @using SiliconBackOffice.Client
 @using SiliconBackOffice.Components
+@using System.ComponentModel.DataAnnotations
+@using System.Text
+@using System.Text.Encodings.Web
+@using Microsoft.AspNetCore.WebUtilities
+@using SiliconBackOffice.Data
+
+@* -----------------------Account------------------------------------- *@
+
+@using SiliconBackOffice.Components.Account
+@using SiliconBackOffice.Components.Account.Pages
+@using SiliconBackOffice.Components.Pages.Partials.AuthPartials
+@using SiliconBackOffice.Models.AuthModels
+@using System.Diagnostics
+@using Microsoft.AspNetCore.Authentication
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.EntityFrameworkCore;
+@using System.Threading.Tasks;
+@using System.Collections.Generic;
+
+
+@inject UserManager<ApplicationUser> _userManager
+@inject SignInManager<ApplicationUser> _signInManager
+@inject NavigationManager _navigationManager
+@inject IdentityRedirectManager _redirectManager
+@inject IEmailSender<ApplicationUser> _emailSender
+@inject IUserStore<ApplicationUser> _userStore
+@inject ILogger<Register> _logger
+@inject ApplicationDbContext _dataContext
+@inject RoleManager<IdentityRole> _roleManager
+
 
 
 @* -----------------------Courses------------------------------------- *@
@@ -18,6 +49,7 @@
 @* @using Pages
 @using Components.Pages.Partials
 @using Components.Pages.Partials.Courses *@
+@using SiliconBackOffice.Data
 @using SiliconBackOffice.Models.Courses
 @using SiliconBackOffice.Components.Pages.Partials.Courses
 
