created a getall function to only look for id and title for saved caourses

--- a/SiliconBackOffice/SiliconBackOffice/Components/Pages/Courses.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Pages/Courses.razor
@@ -74,7 +74,28 @@
 
     public async Task CreateNewcCurse()
     {
-        _courseById = new Course();
+        _courseById = new Course()
+            {
+                Categories = ["", "", "", ""],
+                Authors = [
+                    new Author(),
+                    new Author()
+                ],
+                Content = new()
+                {
+                    Courseincludes = ["", "", "", ""],
+                    WhatYouLearn = ["", "", "", ""],
+                    ProgramDetails = [
+                        new ProgramDetails(){ Description = [""]},
+                        new ProgramDetails(){ Description = [""]},
+                        new ProgramDetails(){ Description = [""]},
+                        new ProgramDetails(){ Description = [""]},
+                        new ProgramDetails(){ Description = [""]},
+                        new ProgramDetails(){ Description = [""]},
+                    ]
+                }
+
+        };
     }
 
 
