--- a/SiliconBackOffice/SiliconBackOffice/wwwroot/css/scss/sections/_saved-courses_backoffice.scss
+++ b/SiliconBackOffice/SiliconBackOffice/wwwroot/css/scss/sections/_saved-courses_backoffice.scss
@@ -1,61 +1,47 @@
+
 .saved-courses-form {
     background-color: var(--color-gray-300);
+    margin: 1rem 0;
 
     .form-wrapper-saved-courses {
         display: grid;
-        grid-template-columns: 1fr 1fr auto auto;
+        grid-template-columns: 2fr 2fr 1fr;
         grid-gap: 1rem;
-        grid-template-areas:
-            "user-id-label course-id-label bookmark-label bookmark-input has-joined-label has-joined-input" "user-id-input course-id-input  ";
+        grid-template-areas: "courses users checkboxes";
 
-        .form-group-saved-courses-id {
-            display: flex;
-            flex-direction: column;
+        label {
+            display: block;
+            font-weight: 700;
+            margin-bottom: 0.5rem;
+        }
 
-            label {
-                font-weight: 700;
-                margin-bottom: 0.5rem;
-            }
+        .form-group-saved-courses-id, .form-group-saved-users-id {
 
             input {
                 border-radius: 0.25rem;
-                width: 65%;
+                width: 100%;
                 margin-bottom: 0.5rem;
                 text-align: center;
                 padding: 0.5rem;
             }
 
-
-            #user-id-label {
-                grid-area: user-id-label;
+            .form-group-saved-courses-id {
+                grid-area: courses;
             }
 
-            #user-id-input {
-                grid-area: user-id;
+            .form-group-saved-users-id {
+                grid-area: users;
             }
+        }
 
-            #course-id-label {
-                grid-area: course-id-label;
-            }
+        .checkbox-wrapper {
+            grid-area: checkboxes;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
 
-            #course-id-input {
-                grid-area: course-id-input;
-            }
+            .checkbox-group-form {
 
-            #bookmark-lable {
-                grid-area: bookmark-lable;
-            }
-
-            #bookmark-input {
-                grid-area: bookmark-input;
-            }
-
-            #has-joined-label {
-                grid-area: has-joined-label;
-            }
-
-            #has-joined-input {
-                grid-area: has-joined-input;
             }
         }
     }
